[package]
name = "rpsi"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["site"]

[dependencies]
string-interner = "0.12"
lazy_static = "1.4"
anyhow = "1"
num = "0.4"
maplit = "1"
peg = "0.7"
logos = "0.12"
regex = "1.5"
pretty = "0.10" 
wasm-bindgen = "0.2"

[profile.release]
debug = true